Fixed the code to close the console.