@@ -16,6 +16,10 @@ title: Version 1.10 > Minor
 This changelog will contain all changes from 1.10.0 onwards before the next major version.
 !!!
 
+==- Version 1.10.39
+Move ETS2 API to new popup system.
+- Due to this it is now possible to use the app UI normally even while waiting for the connection.
+[!badge variant="dark" text="Tumppi066"] [!badge variant="ghost" text="TruckSimAPI"] [!badge variant="ghost" text="MainUI"] [!badge variant="ghost" text="First Time Setup"]
 ==- Version 1.10.38
 Fixed the code to close the console.
 [!badge variant="dark" text="Glas42"] [!badge variant="ghost" text="App Backend"]
