@@ -34,7 +34,7 @@ API = None
 lastX = 0
 lastY = 0
 isConnected = False
-
+popup = None
 def plugin(data):
     global API
     global lastX
@@ -42,8 +42,12 @@ def plugin(data):
     
     try:
         checkAPI()
+        if not isConnected:
+            return data
     except:
         print("Error checking API status")
+        import traceback
+        traceback.print_exc()
         return data
     
     apiData = API.update()    
@@ -77,32 +81,29 @@ def plugin(data):
 
     return data # Plugins need to ALWAYS return the data
 
-def checkAPI():
+def checkAPI(dontClosePopup=False):
     global API
-    global loading
-    global stop
     global isConnected
-    stop = False
+    global popup
     
     if API == None:
         API = scsTelemetry()
         
     data = API.update()
     
-    if data["scsValues"]["telemetryPluginRevision"] < 2:
-        loading = LoadingWindow("Waiting for ETS2 connection...")
-    while data["scsValues"]["telemetryPluginRevision"] < 2 and not stop: 
+    if data["scsValues"]["telemetryPluginRevision"] < 2: 
         isConnected = False
-        data = API.update()
-        loading.update()
-        mainUI.root.update()
-        time.sleep(0.1)
-
-    try:
-        loading.destroy()
-    except: pass
-    
-    isConnected = True
+        if popup == None:
+            popup = helpers.ShowPopup("Waiting for ETS2 to connect\n\nIf you've just installed the SDK\nthen please restart the game.", "Telemetry Server", timeout=0, indeterminate=True, closeIfMainloopStopped=True if not dontClosePopup else False)
+        if popup.closed:
+            popup = None
+    elif isConnected == False:
+        isConnected = True
+        helpers.ShowPopup("\nETS2 connected", "Telemetry Server", timeout=2)
+        try:
+            popup.close()
+            popup = None
+        except: pass
 
 
 # Plugins need to all also have the onEnable and onDisable functions
@@ -119,12 +120,11 @@ def onEnable():
             print("Plugin not installed")
 
 def onDisable():
-    global stop
-    global loading
+    global popup
     
-    stop = True
     try:
-        loading.destroy()
+        popup.close()
+        popup = None
     except: pass
 
 class UI():
